--- a/package.json
+++ b/package.json
@@ -1,68 +1,74 @@
 {
-  "name": "sngsApp",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/camera": "4.3.3",
-    "@ionic-native/core": "4.20.0",
-    "@ionic-native/splash-screen": "4.20.0",
-    "@ionic-native/status-bar": "4.20.0",
-    "@ionic/storage": "2.2.0",
-    "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
-    "cordova-android": "9.1.0",
-    "ionic-angular": "3.9.9",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
-    "cordova-ios": "^6.2.0",
-    "cordova-plugin-android-permissions": "^1.1.2",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-wkwebview-engine": "^1.2.2",
-    "cordova-plugin-wkwebviewxhrfix": "git+https://github.com/TheMattRay/cordova-plugin-wkwebviewxhrfix.git",
-    "typescript": "2.6.2"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-wkwebview-engine": {},
-      "cordova-plugin-wkwebviewxhrfix": {},
-      "cordova-plugin-android-permissions": {}
+    "name": "sngsapp",
+    "version": "0.0.1",
+    "author": "Hamadou DAO",
+    "homepage": "https://www.linkedin.com/in/hamadou-dao/",
+    "private": true,
+    "scripts": {
+        "start": "ionic-app-scripts serve",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint"
     },
-    "platforms": [
-      "ios",
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "5.2.11",
+        "@angular/forms": "5.2.11",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@capacitor/android": "^3.3.3",
+        "@capacitor/app": "^1.0.7",
+        "@capacitor/core": "^3.3.3",
+        "@capacitor/haptics": "^1.1.3",
+        "@capacitor/keyboard": "^1.2.0",
+        "@capacitor/status-bar": "^1.0.6",
+        "@ionic-native/camera": "4.3.3",
+        "@ionic-native/core": "4.20.0",
+        "@ionic-native/diagnostic": "^5.36.0",
+        "@ionic-native/splash-screen": "4.20.0",
+        "@ionic-native/status-bar": "^4.20.0",
+        "@ionic/storage": "2.2.0",
+        "@ngx-translate/core": "8.0.0",
+        "@ngx-translate/http-loader": "^2.0.0",
+        "ionic-angular": "3.9.9",
+        "ionicons": "3.0.0",
+        "rxjs": "5.5.11",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.29"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.2.4",
+        "cordova-ios": "^6.2.0",
+        "cordova-plugin-android-permissions": "^1.1.2",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^4.2.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-wkwebview-engine": "^1.2.2",
+        "cordova-plugin-wkwebviewxhrfix": "git+https://github.com/TheMattRay/cordova-plugin-wkwebviewxhrfix.git",
+        "typescript": "2.6.2"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-wkwebview-engine": {},
+            "cordova-plugin-wkwebviewxhrfix": {},
+            "cordova-plugin-android-permissions": {}
+        },
+        "platforms": [
+            "ios",
+            "android"
+        ]
+    }
 }
