--- a/package.json
+++ b/package.json
@@ -33,6 +33,15 @@
         "@ionic/storage": "2.2.0",
         "@ngx-translate/core": "8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-badge": "^0.8.8",
+        "cordova-plugin-device": "2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.0.5",
+        "cordova-plugin-ionic-webview": "^4.0.0",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
+        "cordova-plugin-splashscreen": "5.0.2",
+        "cordova-plugin-statusbar": "2.4.2",
+        "cordova-plugin-whitelist": "1.3.3",
         "ionic-angular": "3.9.9",
         "ionicons": "3.0.0",
         "rxjs": "5.5.11",
@@ -64,11 +73,12 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-wkwebview-engine": {},
             "cordova-plugin-wkwebviewxhrfix": {},
-            "cordova-plugin-android-permissions": {}
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-local-notification": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
