--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/forms": "5.2.11",
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
+        "@awesome-cordova-plugins/local-notifications": "^5.37.3",
         "@capacitor/android": "^3.3.3",
         "@capacitor/app": "^1.0.7",
         "@capacitor/core": "^3.3.3",
@@ -34,11 +35,9 @@
         "@ngx-translate/core": "8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "cordova-android": "^6.2.3",
-        "cordova-plugin-badge": "^0.8.8",
         "cordova-plugin-device": "2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^4.0.0",
-        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-statusbar": "2.4.2",
         "cordova-plugin-whitelist": "1.3.3",
@@ -73,8 +72,7 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-wkwebview-engine": {},
             "cordova-plugin-wkwebviewxhrfix": {},
-            "cordova-plugin-android-permissions": {},
-            "cordova-plugin-local-notification": {}
+            "cordova-plugin-android-permissions": {}
         },
         "platforms": [
             "android",
