--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/forms": "5.2.11",
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
+        "@angular/router": "^15.1.4",
         "@awesome-cordova-plugins/local-notifications": "^5.37.3",
         "@capacitor/android": "^3.3.3",
         "@capacitor/app": "^1.0.7",
