--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sngsapp",
+    "name": "linatest",
     "version": "0.0.1",
     "author": "Hamadou DAO",
     "homepage": "https://www.linkedin.com/in/hamadou-dao/",
