--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ionic-native/camera": "4.3.3",
         "@ionic-native/core": "4.20.0",
         "@ionic-native/diagnostic": "^5.36.0",
+        "@ionic-native/sms": "^5.36.0",
         "@ionic-native/splash-screen": "4.20.0",
         "@ionic-native/status-bar": "^4.20.0",
         "@ionic/storage": "2.2.0",
@@ -55,6 +56,8 @@
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.2.1",
+        "cordova-plugin-sms": "^1.0.5",
+        "cordova-plugin-sms-receiver": "^0.1.6",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
@@ -73,7 +76,9 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-wkwebview-engine": {},
             "cordova-plugin-wkwebviewxhrfix": {},
-            "cordova-plugin-android-permissions": {}
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-sms": {},
+            "cordova-plugin-sms-receiver": {}
         },
         "platforms": [
             "android",
